@@ -1,6 +1,4 @@
 
-option to show logo or image for cat list
-
 implement image editor
 
 https://github.com/azuyalabs/yasumi
