@@ -3,7 +3,11 @@
     <div class='panel-body'>
         <div class="row">
             <div class="col-xs-12 col-sm-2">
-                <img class="img-responsive img-fluid" src='<{$wgevents_upload_catlogos_url|default:false}>/<{$category.logo}>' alt='<{$category.name}>' >
+                <{if $category.image|default:'blank.gif' != 'blank.gif'}>
+                    <img class="img-responsive img-fluid" src='<{$wgevents_upload_catimages_url|default:false}>/<{$category.image}>' alt='<{$category.name}>' >
+                <{else}>
+                    <img class="img-responsive img-fluid" src='<{$wgevents_upload_catlogos_url|default:false}>/<{$category.logo}>' alt='<{$category.name}>' >
+                <{/if}>
             </div>
             <div class="col-xs-12 col-sm-6 wge-panel-details1"><{$category.desc_text}></div>
             <div class="col-xs-12 col-sm-4 wge-panel-details1"><span class="badge badge-success wge-badge wge-badge-index"><{$category.nbeventsText|default:''}></span></div>
